unpackaged/main/default/objects/Site_Suitability_Checklist__c/Site_Suitability_Checklist__c.object-meta.xml
<CustomObject>
    <description>Created as part of HRP-8137</description>
    <label>Site Suitability Checklist</label>
    <nameField>
        <displayFormat>SSC - {000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Suitability Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>