unpackaged/main/default/objects/Site_Suitability_Checklist__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Site Suitability Checklist</relationshipLabel>
    <relationshipName>Site_Suitability_Checklist</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>