unpackaged/main/default/objects/Site_Suitability_Checklist__c/fields/UniqueName__c.field-meta.xml
<CustomField>
    <fullName>UniqueName__c</fullName>
    <description>Unique name of each field</description>
    <label>Unique Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>