unpackaged/main/default/objects/Site_Suitability_Checklist__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value</label>
    <type>Checkbox</type>
</CustomField>